--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ services:
   - docker build -t lina/docker-react -f Dockerfile.dev . 
 
  script:
-   - docker run lina/docker-react npm run test -- --coverage
+  - docker run -e CI=true lina/docker-react npm run test
