--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ services:
   - docker build -t lina/docker-react -f Dockerfile.dev . 
 
  script:
-  - docker run -e CI=true lina/docker-react npm run test
+  - docker run -e CI=true lina/docker-react npm run test -- --coverage
