--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: generic 
-sudo : required
+sudo: required
 services:
   - docker
 
@@ -8,4 +8,4 @@ services:
   - docker build -t lina/docker-react -f Dockerfile.dev . 
 
  script:
-  - docker run -e CI=true lina/docker-react npm run test -- --coverage
+  - docker run -e CI=true lina/docker-react npm run test
